webappui/frontend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform
      tier: frontend
  template:
    metadata:
      labels:
        app: platform
        tier: frontend
    spec:
      containers:
        - name: webappui
          image: europe-west1-docker.pkg.dev/dsn-dev-01/frontend-repository/img_app:latest
          imagePullPolicy: Always


---

kind: Service
apiVersion: v1
metadata:
  name: frontend-node-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http


---


apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    name: webapp-port
  selector:
    app: platform
    tier: frontend
